[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# Package name, aligning with the repository and command
name = "prompt-gen"
version = "0.1.0" # Increment this as you make changes and release new versions
description = "Interactive TUI to generate project overviews for LLM prompting. Select files/dirs, get structured output."
readme = "README.md"
authors = [
  { name = "Your Name", email = "you@example.com" }, # <<< UPDATE THIS
]
license = { text = "MIT License" } # Ensure this matches your actual license choice
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
]
keywords = ["cli", "tui", "curses", "project-overview", "llm-prompt", "developer-tools", "code-analysis", "context-generator", "prompt-engineering", "promptgen"]

dependencies = [
    # curses is part of the Python standard library
]

[project.scripts]
# The command-line script will now be 'prompt-gen'
prompt-gen = "main:main"

[project.urls]
"Homepage" = "https://github.com/bazarghan/prompt-gen"
"Repository" = "https://github.com/bazarghan/prompt-gen"
"Bug Tracker" = "https://github.com/bazarghan/prompt-gen/issues"

