[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-gen"
version = "0.1.0" 
description = "Interactive TUI to generate project overviews for LLM prompting. Select files/dirs, get structured output."
readme = "README.md"
authors = [
  { name = "Alireza Bazarghan", email = "bazarghan80@gmail.com" }, # 
]
license = {text = "MIT"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
]
keywords = ["cli", "tui", "curses", "project-overview", "llm-prompt", "developer-tools", "code-analysis", "context-generator", "prompt-engineering", "promptgen"]

dependencies = [
    # curses is part of the Python standard library
    # For Windows, users will need to manually 'pip install windows-curses'
]

[project.scripts]
prompt-gen = "main:main"

[project.urls]
"Homepage" = "https://github.com/bazarghan/prompt-gen"
"Repository" = "https://github.com/bazarghan/prompt-gen"
"Bug Tracker" = "https://github.com/bazarghan/prompt-gen/issues"

# Explicitly tell setuptools which modules to include
[tool.setuptools]
py-modules = [
    "main",
    "tui",
    "config",
    "file_operations",
    "keybindings",
    "output_generator",
    "theme_manager"  # <<< ADDED theme_manager HERE
]

